--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div class="header_buttons">
                 <button class="search_button">
-                    <i class="fa-solid fa-magnifying-glass"></i></button>
+                    <i class="fa-regular fa-sun"></i></button>
 
                 <button class="user_button"><i class="fa-regular fa-user"></i></button>
 
@@ -51,13 +51,13 @@
         <!-- section -->
         <section class="section1">
             <div class="background-div">
-                <div class="slider-img"><img src="https://picsum.photos/id/232/1500/560" alt=""></div>
+                <div class="slider-img"><img src="https://picsum.photos/id/232/1440/560" alt=""></div>
             </div>
             <div class="background-div active">
-                <div class="slider-img"><img src="https://picsum.photos/id/235/1500/560" alt=""></div>
+                <div class="slider-img"><img src="https://picsum.photos/id/235/1440/560" alt=""></div>
             </div>
             <div class="background-div">
-                <div class="slider-img"><img src="https://picsum.photos/id/233/1500/560" alt=""></div>
+                <div class="slider-img"><img src="https://picsum.photos/id/233/1440/560" alt=""></div>
             </div>
             <div class="left-arrow"><i class="fa-solid fa-left-long"></i></div>
             <div class="right-arrow"><i class="fa-solid fa-right-long"></i></div>
