--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
             <div class="header_buttons">
                 <button class="search_button">
-                    <i class="fa-solid fa-magnifying-glass"></i></button>
+                    <i class="fa-regular fa-sun"></i></button>
                 <button class="user_button"><i class="fa-regular fa-user"></i></button>
                 <button class="cart_button"><i class="fa-solid fa-cart-shopping"></i></button>
             </div>
